# client

./: .gitmodules  Cargo.toml
assets/: floor.wc1  io_export_wc1.py  marker.wc1  pillar.wc1
config/: client.toml  default.toml
src/: client.rs  eventloop.rs  iohandler.rs  lib.rs  main.rs  networking.rs  window.rs
src/display/: displayconfig.rs  graph.rs  mesh.rs  mod.rs  renderer.rs  scene.rs  texture.rs  ui.rs  window.rs
src/display/component/: hotbar.rs  mod.rs  splash.rs
src/display/pipeline/: mesh.rs  mesh.vert  ui.rs  ui.vert
src/input/: inputtypes.rs  mod.rs  mouse.rs
src/loaders/: erm.rs  heightmap.rs  mod.rs  wc1.rs
src/renderer/: config.rs  graph.rs  mesh.rs  mod.rs  model.rs  scene.rs  terrain.rs  texture.rs  window.rs
src/renderer/pipeline/: mesh.frag  mesh.rs  mesh.vert  mod.rs  ui.frag  ui.rs
src/simulation/: event.rs  mod.rs  physicsconfig.rs  simulation.rs
src/simulation/component/: collider.rs  jump.rs  mod.rs  model.rs  movement.rs  serverid.rs  terrain.rs  texture.rs  velocity.rs
src/simulation/resource/: activecamera.rs  activecharacter.rs  inputmap.rs  mod.rs  ticklength.rs
src/simulation/system/: collisiondetection.rs  collisionresolver.rs  mod.rs  physics.rs  playermovement.rs  updateinputs.rs  updatesender.rs  updateworld.rs
src/ui/: component.rs  mod.rs
src/util/: config.rs  interpolate.rs  logging.rs  mod.rs
