[package]
name = "eternalreckoning-client"
version = "0.1.4"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[features]
default = [
    "rendy/vulkan",
    "rendy/texture-image",
    "rendy/texture-palette",
]

x11 = [
    "default",
    "rendy/vulkan-x11"
]

[dependencies]
eternalreckoning-core = { version = "0.1.4", path = "../core" }
eternalreckoning-ui = { version = "0.1.0", path = "../ui" }

bitflags = "1.1"
bmp = "0.5"
bytes = "0.4"
circular-queue = "0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
gfx-hal = "0.3"
lazy_static = "1.4"
log = "0.4"
nalgebra = "0.18"
rendy = { git = "https://github.com/amethyst/rendy" }
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
tokio = "0.1"
tokio-dns-unofficial = "0.4"
uuid = "0.7"