[package]
name = "eternalreckoning-client"
version = "0.3.0"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[features]
default = [
    "rendy/init",
    "rendy/init-winit",
    "rendy/vulkan",
    "rendy/texture-image",
    "rendy/texture-palette",
]

[dependencies]
eternalreckoning-core = { git = "https://github.com/EternalReckoning/core", tag = "v0.3.0" }
eternalreckoning-ui = { git = "https://github.com/EternalReckoning/ui", tag = "v0.1.0" }

bitflags = "1.2"
bmp = "0.5"
bytes = "0.5"
circular-queue = "0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
gfx-hal = "0.4"
lazy_static = "1.4"
log = "0.4"
nalgebra = "0.19"
rendy = { git = "https://github.com/amethyst/rendy" }
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
tokio = { version = "0.2", features = ["dns", "macros", "rt-core", "udp"] }
tokio-util = { version = "0.2", features = ["codec", "udp"] }
uuid = "0.8"
winit = "0.20"